Bug 286630 -  nsSchemaLoader doesn't bail on invalid elements as direct children of xs:schema. r/sr=peterv